# eud

./: .gitignore  CODE-OF-CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  Makefile.am  README.md  configure.ac  meson.build
.github/workflows/: stale-issues.yaml
inc/: com_api.h  com_eud.h  ctl_api.h  ctl_eud.h  device_manager.h  eud.h  eud_error_defines.h  eud_log.h  eud_revision.h  jtag_api.h  jtag_eud.h  swd_api.h  swd_eud.h  trc_api.h  trc_eud.h  usb.h
src/: com_api.cpp  com_eud.cpp  ctl_api.cpp  ctl_eud.cpp  device_manager.cpp  eud.cpp  eud_api.cpp  eud_error_defines.cpp  eud_log.cpp  general_api_processing.cpp  jtag_api.cpp  jtag_eud.cpp  jtag_test.cpp  rw_childprocess.cpp  swd_api.cpp  swd_eud.cpp  trc_api.cpp  trc_eud.cpp  usb.cpp
test/: test_trace.c
